# shtk

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  COPYING  INSTALL  INSTALL.md  Kyuafile  Makefile.am  NEWS  NEWS.md  README  README.md  base.subr  base_test.sh  bool.subr  bool_test.sh  bootstrap.subr  cleanup.subr  cleanup_test.sh  cli.subr  cli_test.sh  config.subr  config_test.sh  configure.ac  cvs.subr  cvs_test.sh  docs.html  fs.subr  fs_test.sh  git.subr  git_test.sh  hw.subr  hw_test.sh  index.html  install.html  list.subr  list_test.sh  prek.toml  process.subr  (+82 more)
.github/workflows/: bazel.yml  build.sh  buildifier.sh  install-deps.sh  install-kyua.sh  install.sh  lint.yml  site.yml  test.yml
admin/: clean-all.sh  travis-build.sh  travis-install-deps.sh
bazel_examples/: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  inttest.sh
bazel_examples/binary/: BUILD.bazel  hello.sh
bazel_examples/test/: BUILD.bazel  adder.c  adder_test.sh
bazel_rules/: BUILD.bazel  MODULE.bazel  README.md  repositories.bzl  rules.bzl  toolchain.BUILD.tpl  toolchains.bzl  versions.bzl
man/: README  shtk.1.in  shtk.3  shtk_abort.3  shtk_bool.3  shtk_bool_check.3  shtk_cleanup.3  shtk_cleanup_register.3  shtk_cli.3  shtk_cli_debug.3  shtk_cli_dirname.3  shtk_cli_error.3  shtk_cli_info.3  shtk_cli_log_level.3  shtk_cli_progname.3  shtk_cli_set_help_command.3  shtk_cli_set_log_level.3  shtk_cli_usage_error.3  shtk_cli_warning.3  shtk_config.3  shtk_config_get.3  shtk_config_get_bool.3  shtk_config_get_default.3  shtk_config_has.3  shtk_config_include.3  shtk_config_init.3  shtk_config_load.3  shtk_config_override.3  shtk_config_run_hook.3  shtk_config_set.3  shtk_config_unset.3  shtk_cvs.3  shtk_cvs_checkout.3  shtk_cvs_fetch.3  shtk_cvs_update.3  shtk_fs.3  shtk_fs_join_paths.3  shtk_fs_normalize_path.3  shtk_git.3  shtk_git_clone.3  (+33 more)
site/: CNAME  build.sh  docs.html.frag  footer.html.in  header.html.in  index.html.frag
unittest/: Kyuafile  commands.subr  commands_test.sh  files.subr  files_test.sh  operators.subr  operators_test.sh
